Adding Employee model draft

--- a/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
@@ -2,13 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 <div class="main-div">
-
-    <center><h1>Bem Vindo</h1></center>
+    <div style="margin-top:100px;"><center><h1>Bem Vindo</h1></center></div>
 
 </div>
 <br />
-<div class="left-div">teste</div>
-<div class="right-div">teste2</div>
+<div class="left-div">
+    <div style="background-color:aquamarine">
+        <center>Consultar horários completos</center>
+    </div>
+</div>
+<div class="right-div">
+    <div style="background-color:aquamarine">
+        <center>Consultar horários Individuais</center>
+    </div>
+
+</div>
 <br />
 
 <div style="height:200px"></div>
