--- a/HospitalScheduling/HospitalScheduling/Views/Empregados/nurse.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Empregados/nurse.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Employee>
+﻿@model IEnumerable<Nurse>
 
 @{
     ViewData["Title"] = "Employes List";
@@ -10,8 +10,6 @@
     <thead>
         <tr>
             <th>Name</th>
-            <th>Price</th>
         </tr>
     </thead>
 </table>
-
