--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Details.cshtml
@@ -1,48 +1,87 @@
-﻿@model HospitalScheduling.Models.Nurse
-
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h2>Details</h2>
+﻿@page
+@model HospitalScheduling.Views.Nurses.DetailsModel
 
 <div>
     <h4>Nurse</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Nurse.OwnerID)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Nurse.OwnerID)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.Nurse.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Email)
+            @Html.DisplayFor(model => model.Nurse.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.Nurse.Email)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Phone)
+            @Html.DisplayFor(model => model.Nurse.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Birthday)
+            @Html.DisplayNameFor(model => model.Nurse.Phone)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Birthday)
+            @Html.DisplayFor(model => model.Nurse.Phone)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Adress)
+            @Html.DisplayNameFor(model => model.Nurse.Birthday)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Adress)
+            @Html.DisplayFor(model => model.Nurse.Birthday)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Nurse.Adress)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Nurse.Adress)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Nurse.Status)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Nurse.Status)
         </dd>
     </dl>
 </div>
+@if (Model.Nurse.Status != EmpStatus.Approved)
+{
+    @if ((await AuthorizationService.AuthorizeAsync(
+    User, Model.Nurse, NurseOperations.Approve)).Succeeded)
+    {
+        <form style="display:inline;" method="post">
+            <input type="hidden" name="id" value="@Model.Nurse.EmployeeID" />
+            <input type="hidden" name="status" value="@EmpStatus.Approved" />
+            <button type="submit" class="btn btn-xs btn-success">Approve</button>
+        </form>
+    }
+}
+
+@if (Model.Nurse.Status != EmpStatus.Rejected)
+{
+    @if ((await AuthorizationService.AuthorizeAsync(
+    User, Model.Nurse, NurseOperations.Reject)).Succeeded)
+    {
+        <form style="display:inline;" method="post">
+            <input type="hidden" name="id" value="@Model.Nurse.EmployeeID" />
+            <input type="hidden" name="status" value="@EmpStatus.Rejected" />
+            <button type="submit" class="btn btn-xs btn-success">Reject</button>
+        </form>
+    }
+}
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.EmployeeID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if ((await AuthorizationService.AuthorizeAsync(
+        User, Model.Nurse,
+        NurseOperations.Update)).Succeeded)
+    {
+        <a asp-page="./Edit" asp-route-id="@Model.Nurse.EmployeeID">Edit</a>
+        <text> | </text>
+    }
+    <a asp-page="./Index">Back to List</a>
 </div>
