amazing commit of friday

--- a/HospitalScheduling/HospitalScheduling/Views/Forms/HollidayView.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Forms/HollidayView.cshtml
@@ -11,12 +11,12 @@
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="Datestart">Starting date of vacation:</label>
-        <input asp-for="Datestart" class="form-control" placeholder="Please, enter the starting date of your vacation" />
+        <label asp-for="DateStart">Starting date of vacation:</label>
+        <input asp-for="DateStart" class="form-control" placeholder="Please, enter the starting date of your vacation" />
     </div>
     <div class="form-group">
-        <label asp-for="Dateend">Ending date of vacation:</label>
-        <input asp-for="Dateend" class="form-control" placeholder="Please, enter the ending date of your vacation" />
+        <label asp-for="DateEnd">Ending date of vacation:</label>
+        <input asp-for="DateEnd" class="form-control" placeholder="Please, enter the ending date of your vacation" />
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
