--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Doctors" asp-action="Index">Doctors</a></li>
                     <li><a asp-area="" asp-controller="Nurses" asp-action="Index">Nurses</a></li>
+                    <li><a asp-area="" asp-controller="HollidayForms" asp-action="Index">Holliday Form</a></li>
+                    <li><a asp-area="" asp-controller="RuleModels" asp-action="Index">Rules</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
