--- a/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<HospitalScheduling.Models.HollidayForm>
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Index";
 }
 
 <!DOCTYPE html>
