--- a/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
@@ -4,14 +4,13 @@
 
 <html>
 <body>
-
     <div class="hero-wrap" style="background-image: url('images/bg_1.jpg'); background-attachment:fixed;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
-                    <h1 class="mb-4">Bem-Vindo</h1>
-                    <h6 class="mb-3 bread">Para ver horarios/ferias ou alterações faça login.</h6>
+                    <h1 class="mb-4">Welcome</h1>
+                    <h6 class="mb-3 bread">To see the schedules/holidays or alterations, please login.</h6>
                     <a href="/Identity/Account/Login" class="btn btn-primary">Login</a>
                 </div>
             </div>
