--- a/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Index.cshtml
@@ -1,21 +1,25 @@
 ﻿@model IEnumerable<HospitalScheduling.Models.HollidayForm>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
+<div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
+    <div class="overlay"></div>
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
+                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Holiday Form - @ViewData["Title"]</span></p>
+                <h1 class="mb-3 bread">Holiday Form - @ViewData["Title"]</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<br />
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary" style="margin-left:15px">Create New</a>
 </p>
-<table class="table">
+<table class="table" style="margin-left:15px;max-width:98.5% !important;">
     <thead>
         <tr>
             <th>
@@ -28,22 +32,22 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateStart)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateEnd)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.VacationID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.VacationID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.VacationID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateStart)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateEnd)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.VacationID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.VacationID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.VacationID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
-</body>
-</html>
+</br>
