--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
@@ -54,14 +54,14 @@
 
     <div>
         @RenderBody()
-        <footer class="ftco-footer ftco-bg-dark ftco-section img" style="background-image: url(images/bg_5.jpg); background-color:turquoise">
+        <footer class="ftco-footer ftco-bg-dark ftco-section img" style="background-image: url(images/bg_5.jpg); background-color:turquoise;">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-md">
                         <div class="ftco-footer-widget mb-4">
                             <h2 class="ftco-heading-2">HospitalScheduling</h2>
-                            <p>Um site de escaloneamento hospitalar feito com recurso a tecnologia c# asp.net core para a disciplina de Programação para Internet</p>
+                            <p>A hospital scheduling site made enabled by c# asp.net core tecnology for the class: Programação para Internet</p>
                             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-md">
                         <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Tem Questões?</h2>
+                            <h2 class="ftco-heading-2">Have Questions?</h2>
                             <div class="block-23 mb-3">
                                 <ul>
                                     <li><span class="icon icon-map-marker"></span><span class="text">Av. Dr. Francisco Sá Carneiro, 50</span></li>
@@ -97,7 +97,7 @@
                     <div class="col-md-12 text-center">
                         <p>
                             Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Todos direitos reservados | Este template foi adaptado com <i class="icon-heart" aria-hidden="true"></i> por Diogo Sá
+                            <script>document.write(new Date().getFullYear());</script> All Rights Reserved | This template was adapted <i class="icon-heart" aria-hidden="true"></i> by Diogo Sá
                         </p>
                     </div>
                 </div>
