--- a/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
@@ -9,9 +9,20 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
                 <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
-                    <h1 class="mb-4">Welcome</h1>
-                    <h6 class="mb-3 bread">To see the schedules/holidays or alterations, please login.</h6>
-                    <a href="/Identity/Account/Login" class="btn btn-primary">Login</a>
+                    @{
+                        if (!User.Identity.IsAuthenticated)
+                        {
+                            <h1 class="mb-4">Welcome</h1>
+                            <h6 class="mb-3 bread">To see the schedules/holidays or alterations, please login.</h6>
+                            <a href="/Identity/Account/Login" class="btn btn-primary">Login</a>
+                        }
+                        else
+                        {
+                            <h1 class="mb-4">Welcome, @User.Identity.Name</h1>
+                            <h6 class="mb-3 bread">To see the schedules you can visit @Html.ActionLink("Doctors", "Index", "Doctors") or @Html.ActionLink("Nurses", "Index", "Nurses").</h6>
+                            <h6 class="mb-3 bread">You can also visit @Html.ActionLink("Holiday Forms", "Index", "HollidayForms") to schedule your holidays.</h6>
+                        }
+                    }
                 </div>
             </div>
         </div>
