--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Index.cshtml
@@ -28,7 +28,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            <th>
+            <th colspan="3">
                 @Html.DisplayNameFor(model => model.Phone)
             </th>
         </tr>
