--- a/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/HollidayForms/Create.cshtml
@@ -4,11 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
+
 <div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
     <div class="overlay"></div>
-    <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
-            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated" style="margin-top:-420px">
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
                 <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Holiday Form - @ViewData["Title"]</span></p>
                 <h1 class="mb-3 bread">Holiday Form - @ViewData["Title"]</h1>
             </div>
@@ -22,29 +23,44 @@
         <div class="col-md-4">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <table>
+                    <tr>
+                        <td style="min-width:6em;text-align:justify">
+                            <label asp-for="DateStart" class="control-label" style="margin-top:10px"></label>
+                            <label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="DateStart" class="form-control" style="text-align:center;width:30em;" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="DateStart" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:6em;text-align:justify">
+                            <label asp-for="DateEnd" class="control-label" style="margin-top:10px"></label>
+                            <label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="DateEnd" class="form-control" style="text-align:center;width:30em;" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="DateEnd" class="text-danger"></span>
+                        </td>
+                    </tr>
+                </table>
+                <br />
                 <div class="form-group">
-                    <label asp-for="DateStart" class="control-label"></label>
-                    <input asp-for="DateStart" class="form-control" />
-                    <span asp-validation-for="DateStart" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DateEnd" class="control-label"></label>
-                    <input asp-for="DateEnd" class="form-control" />
-                    <span asp-validation-for="DateEnd" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-info">Back to List</a>
                 </div>
             </form>
         </div>
     </div>
 
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
-    <br/>
+    <br />
 </center>
 
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
