--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
-
 <div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
     <div class="overlay"></div>
-    <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
-            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated" style="margin-top:-420px">
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
                 <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Nurses - @ViewData["Title"]</span></p>
                 <h1 class="mb-3 bread">Nurses - @ViewData["Title"]</h1>
             </div>
@@ -24,40 +23,76 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="EmployeeID" />
+                <table class="table-borderless">
+                    <tr>
+                        <td style="min-width:5em;text-align:justify">
+                            <label asp-for="Name" class="control-label" style="margin-top:10px">
+                            </label>
+                            <label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="Name" class="form-control" placeholder="Insert a name" style="text-align:center;width:30em;" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:5em;text-align:justify">
+                            <label asp-for="Email" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="Email" class="form-control" placeholder="Insert an email" style="text-align:center" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:5em;text-align:justify">
+                            <label asp-for="Phone" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="Phone" class="form-control" placeholder="Insert a phone number" style="text-align:center" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="Phone" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:5em;text-align:justify">
+                            <label asp-for="Birthday" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="Birthday" class="form-control" placeholder="Insert a birth date" style="text-align:center" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="Birthday" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:5em;text-align:justify">
+                            <label asp-for="Adress" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="Adress" class="form-control" placeholder="Insert an address" style="text-align:center;" />
+                        </td>
+                        <td>
+                            <span asp-validation-for="Adress" class="text-danger"></span>
+                        </td>
+                    </tr>
+                </table>
+                <br />
                 <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Phone" class="control-label"></label>
-                    <input asp-for="Phone" class="form-control" />
-                    <span asp-validation-for="Phone" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Birthday" class="control-label"></label>
-                    <input asp-for="Birthday" class="form-control" />
-                    <span asp-validation-for="Birthday" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Adress" class="control-label"></label>
-                    <input asp-for="Adress" class="form-control" />
-                    <span asp-validation-for="Adress" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-info">Back to List</a>
                 </div>
             </form>
         </div>
-    </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
     </div>
     <br />
 </center>
