--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Details.cshtml
@@ -46,15 +46,15 @@
             </tr>
             <tr>
                 <td style="min-width:5em;text-align:justify">
-                    <b>@Html.DisplayNameFor(model => model.Adress): </b>
+                    <b>@Html.DisplayNameFor(model => model.Address): </b>
                 </td>
-                <td>@Html.DisplayFor(model => model.Adress)</td>
+                <td>@Html.DisplayFor(model => model.Address)</td>
             </tr>
         </table>
     </div>
     <br />
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.EmployeeID" class="btn btn-success">Edit</a>
+        <a asp-action="Edit" asp-route-id="@Model.NurseID" class="btn btn-success">Edit</a>
         <a asp-action="Index" class="btn btn-info">Back to List</a>
     </div>
     <br />
