--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Index.cshtml
@@ -47,9 +47,9 @@
                     @Html.DisplayFor(modelItem => item.Phone)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.EmployeeID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.EmployeeID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.EmployeeID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.NurseID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.NurseID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.NurseID">Delete</a>
                 </td>
             </tr>
         }
