--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Create.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Create.cshtml
@@ -76,14 +76,14 @@
                         </tr>
                         <tr>
                             <td style="min-width:5em;text-align:justify">
-                                <label asp-for="Adress" class="control-label" style="margin-top:10px">
+                                <label asp-for="Address" class="control-label" style="margin-top:10px">
                                 </label><label style="margin-top:10px">: </label>
                             </td>
                             <td>
-                                <input asp-for="Adress" class="form-control" placeholder="Insert an address" style="text-align:center;" />
+                                <input asp-for="Address" class="form-control" placeholder="Insert an address" style="text-align:center;" />
                             </td>
                             <td>
-                                <span asp-validation-for="Adress" class="text-danger"></span>
+                                <span asp-validation-for="Address" class="text-danger"></span>
                             </td>
                         </tr>
                     </table>
