--- a/HospitalScheduling/HospitalScheduling/Views/Doctors/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Doctors/Index.cshtml
@@ -28,7 +28,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
-            <th>
+            <th colspan="3">
                 @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th></th>
@@ -48,9 +48,9 @@
                     @Html.DisplayFor(modelItem => item.Phone)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.EmployeeID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.EmployeeID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.EmployeeID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.DoctorID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.DoctorID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.DoctorID">Delete</a>
                 </td>
             </tr>
         }
