--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Delete.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Delete.cshtml
@@ -48,16 +48,16 @@
                 </tr>
                 <tr>
                     <td style="min-width:5em;text-align:justify">
-                        <b>@Html.DisplayNameFor(model => model.Adress): </b>
+                        <b>@Html.DisplayNameFor(model => model.Address): </b>
                     </td>
-                    <td>@Html.DisplayFor(model => model.Adress)</td>
+                    <td>@Html.DisplayFor(model => model.Address)</td>
                 </tr>
             </table>
         </div>
         <br />
 
         <form asp-action="Delete">
-            <input type="hidden" asp-for="EmployeeID" />
+            <input type="hidden" asp-for="NurseID" />
             <input type="submit" value="Delete" class="btn btn-danger" />
             <a asp-action="Index" class="btn btn-info">Back to List</a>
         </form>
