--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Edit.cshtml
@@ -19,13 +19,13 @@
 <center>
     <hr />
     <div>
-        <div class="col-md-4">
+        <div class="col-md-4" >
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="EmployeeID" />
+                <input type="hidden" asp-for="NurseID" />
                 <table class="table-borderless">
                     <tr>
-                        <td style="min-width:5em;text-align:justify">
+                        <td style="min-width:7em;text-align:justify">
                             <label asp-for="Name" class="control-label" style="margin-top:10px">
                             </label>
                             <label style="margin-top:10px">: </label>
@@ -33,56 +33,81 @@
                         <td>
                             <input asp-for="Name" class="form-control" placeholder="Insert a name" style="text-align:center;width:30em;" />
                         </td>
-                        <td>
+                        <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </td>
                     </tr>
                     <tr>
-                        <td style="min-width:5em;text-align:justify">
+                        <td style="min-width:7em;text-align:justify">
                             <label asp-for="Email" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
                             <input asp-for="Email" class="form-control" placeholder="Insert an email" style="text-align:center" />
                         </td>
-                        <td>
+                        <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </td>
                     </tr>
                     <tr>
-                        <td style="min-width:5em;text-align:justify">
+                        <td style="min-width:7em;text-align:justify">
                             <label asp-for="Phone" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
                             <input asp-for="Phone" class="form-control" placeholder="Insert a phone number" style="text-align:center" />
                         </td>
-                        <td>
+                        <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="Phone" class="text-danger"></span>
                         </td>
                     </tr>
                     <tr>
-                        <td style="min-width:5em;text-align:justify">
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="Sons" class="control-label" style="margin-top:10px">
+                            </label><label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            @Html.DropDownListFor(m => m.Sons, new List<SelectListItem>() { new SelectListItem("True", "true"), new SelectListItem("False", "false") }, null, new { @id = "sonsbox", @class = "form-control", placeholder = "Does the nurse have children", @style = "text-align:center;text-indent:42%", @onchange = "displaySons()"})
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="Sons" class="text-danger"></span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="min-width:7em;text-align:justify">
                             <label asp-for="Birthday" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
                             <input asp-for="Birthday" class="form-control" placeholder="Insert a birth date" style="text-align:center" />
                         </td>
-                        <td>
+                        <td style="min-width:30em;text-align:justify">
                             <span asp-validation-for="Birthday" class="text-danger"></span>
                         </td>
                     </tr>
+                    <tr id="displaysons">
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="BirthdaySon" class="control-label" style="margin-top:10px">
+                            </label> <label style="margin-top:10px">: </label>
+                        </td>
+                        <td>
+                            <input asp-for="BirthdaySon" class="form-control" placeholder="Insert son`s birth date" style="text-align:center" />
+                        </td>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="BirthdaySon" class="text-danger"></span>
+                        </td>
+                    </tr>
+
                     <tr>
-                        <td style="min-width:5em;text-align:justify">
-                            <label asp-for="Adress" class="control-label" style="margin-top:10px">
+                        <td style="min-width:7em;text-align:justify">
+                            <label asp-for="Address" class="control-label" style="margin-top:10px">
                             </label><label style="margin-top:10px">: </label>
                         </td>
                         <td>
-                            <input asp-for="Adress" class="form-control" placeholder="Insert an address" style="text-align:center;" />
+                            <input asp-for="Address" class="form-control" placeholder="Insert an address" style="text-align:center;" />
                         </td>
-                        <td>
-                            <span asp-validation-for="Adress" class="text-danger"></span>
+                        <td style="min-width:30em;text-align:justify">
+                            <span asp-validation-for="Address" class="text-danger"></span>
                         </td>
                     </tr>
                 </table>
