--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
@@ -31,8 +31,18 @@
     <link rel="stylesheet" href="~/css/flaticon.css">
     <link rel="stylesheet" href="~/css/icomoon.css">
     <link rel="stylesheet" href="~/css/style.css">
+
+    <script>
+        function displaySons() {
+            if (document.getElementById('sonsbox').value == "false") {
+                document.getElementById('displaysons').style.visibility = "collapse";
+            } else {
+                document.getElementById('displaysons').style.visibility = "visible";
+            }
+        }
+    </script>
 </head>
-<body data-aos-easing="slide" data-aos-duration="800" data-aos-delay="0">
+<body data-aos-easing="slide" data-aos-duration="800" data-aos-delay="0" onload="displaySons()">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
             <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><i class="flaticon-pharmacy"></i><span>Hospital</span>Scheduling</a>
@@ -50,7 +60,6 @@
             </div>
         </div>
     </nav>
-    <partial name="_CookieConsentPartial" />
 
     <div>
         @RenderBody()
