Improvements in the views Added CRUD Shift & DoctorShifts Improved seeddata

--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
@@ -53,8 +53,9 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a></li>
                     <li class="nav-item"><a asp-area="" asp-controller="Doctors" asp-action="Index" class="nav-link">Doctors</a></li>
-                    <li class="nav-item"><a asp-area="" asp-controller="Specialities" asp-action="Index" class="nav-link">Specialities</a></li>
                     <li class="nav-item"><a asp-area="" asp-controller="Nurses" asp-action="Index" class="nav-link">Nurses</a></li>
+                    <li class="nav-item"><a asp-area="" asp-controller="Specialities" asp-action="Index" class="nav-link">Specialities</a></li>
+                    <li class="nav-item"><a asp-area="" asp-controller="Shifts" asp-action="Index" class="nav-link">Shifts</a></li>
                     <li class="nav-item"><a asp-area="" asp-controller="HollidayForms" asp-action="Index" class="nav-link">Holiday Form</a></li>
                     <partial name="_LoginPartial" />
                 </ul>
