--- a/HospitalScheduling/HospitalScheduling/Views/Specialities/Edit.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Specialities/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="RegisterDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Doctors" class="control-label"></label>
+                @Html.
+                <span asp-validation-for="Doctors" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
